added documentation for get APIs for booking, halls & movies
